Lab_10_Implementing_Continuous_Deployment_with_GitOps/app-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: gitops-demo
spec:
  selector:
    app: sample-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
