Lab_10_Implementing_Continuous_Deployment_with_GitOps/app-config/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app-route
  namespace: gitops-demo
spec:
  to:
    kind: Service
    name: sample-app-service
  port:
    targetPort: 80
